add google form

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <p class="text-gray-400 text-sm mb-8">
                         プロジェクト支援やシステム開発のご相談はこちらから。担当者より折り返しご連絡いたします。
                     </p>
-                    <a href="https://forms.gle/your-google-form-id" target="_blank" class="w-full py-4 bg-white text-black font-bold hover:bg-gray-200 transition text-center rounded">
+                    <a href="https://forms.gle/9nQyeNihT8CBrd4i9" target="_blank" class="w-full py-4 bg-white text-black font-bold hover:bg-gray-200 transition text-center rounded">
                         お問い合わせフォームを開く
                     </a>
                 </div>
@@ -274,7 +274,7 @@
                     <p class="text-gray-400 text-sm mb-8">
                         RichGeeksでは、高単価・プライム案件を多数取り揃えております。まずはサービスサイトをご覧ください。
                     </p>
-                    <a href="https://rich-geeks.com/" target="_blank" class="w-full py-4 border border-white text-white font-bold hover:bg-white hover:text-black transition text-center rounded">
+                    <a href="https://richgeeks.2w-tech.com/" target="_blank" class="w-full py-4 border border-white text-white font-bold hover:bg-white hover:text-black transition text-center rounded">
                         RichGeeks サービスサイト
                     </a>
                 </div>
