update richgeeks url

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         フリーランスエンジニアを対象としたエージェントプラットフォーム「RichGeeks」を運営。90%以上の高還元率を実現し、エンジニアのバリュー最大化を実現します。
                     </p>
                     <div class="mt-8 pt-6 border-t border-neutral-800">
-                        <a href="https://rich-geeks.com/" target="_blank" class="richgeeks-link text-lg font-bold flex items-center group">
+                        <a href="https://richgeeks.2w-tech.com/" target="_blank" class="richgeeks-link text-lg font-bold flex items-center group">
                             RichGeeks サイトへ <i class="fas fa-external-link-alt ml-2 text-xs opacity-0 group-hover:opacity-100 transition"></i>
                         </a>
                         <p class="text-xs text-gray-500 mt-2">※フリーランスエンジニア向け案件紹介サイト</p>
