--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <section id="company" class="bg-[#0f0f0f]">
         <div class="max-w-4xl mx-auto px-6">
             <h2 class="text-sm uppercase tracking-[0.3em] text-gray-500 mb-4 text-center">Company Profile</h2>
-            <h3 class="text-3xl font-bold mb-12 text-center">会社紹介</h3>
+            <h3 class="text-3xl font-bold mb-12 text-center">会社概要</h3>
             
             <div class="space-y-0 border-t border-neutral-800">
                 <div class="grid md:grid-cols-4 py-6 border-b border-neutral-800">
@@ -290,8 +290,7 @@
                 <p class="text-xs text-neutral-600">© 2025 2W Inc. All rights reserved.</p>
             </div>
             <div class="flex space-x-6 text-xs tracking-widest text-neutral-500 uppercase">
-                <a href="#" class="hover:text-white transition">Privacy Policy</a>
-                <a href="#" class="hover:text-white transition">Information Security</a>
+                <a href="privacy-policy.html" class="hover:text-white transition">Privacy Policy</a>
                 <a href="#company" class="hover:text-white transition">About Us</a>
             </div>
         </div>
