--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プライバシーポリシー | 株式会社2W | 2W Inc.</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -20,37 +21,78 @@
             border-bottom: 1px solid #333;
         }
         section {
-            padding: 100px 20px;
+            padding: 60px 20px;
+        }
+        @media (min-width: 768px) {
+            section {
+                padding: 100px 20px;
+            }
         }
         h1 {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
+            font-size: 1.875rem;
+            margin-bottom: 1.5rem;
+        }
+        @media (min-width: 768px) {
+            h1 {
+                font-size: 2.5rem;
+                margin-bottom: 2rem;
+            }
         }
         h2 {
-            margin-top: 3.5rem !important;
-            margin-bottom: 1.5rem !important;
+            margin-top: 2.5rem !important;
+            margin-bottom: 1rem !important;
             font-weight: 700 !important;
             color: #ffffff !important;
-            font-size: 1.75rem !important;
+            font-size: 1.25rem !important;
+        }
+        @media (min-width: 768px) {
+            h2 {
+                margin-top: 3.5rem !important;
+                margin-bottom: 1.5rem !important;
+                font-size: 1.75rem !important;
+            }
         }
         h3 {
-            margin-top: 1.5rem;
-            margin-bottom: 0.75rem;
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
             font-weight: 600;
             color: #e5e5e5;
-            font-size: 1.25rem;
+            font-size: 1rem;
+        }
+        @media (min-width: 768px) {
+            h3 {
+                margin-top: 1.5rem;
+                margin-bottom: 0.75rem;
+                font-size: 1.25rem;
+            }
         }
         p {
             line-height: 1.8;
-            margin-bottom: 1.5rem;
-            padding: 0 0.5rem;
+            margin-bottom: 1rem;
+            padding: 0 0.25rem;
+            font-size: 0.95rem;
             color: #c5c5c5;
+        }
+        @media (min-width: 768px) {
+            p {
+                margin-bottom: 1.5rem;
+                padding: 0 0.5rem;
+                font-size: 1rem;
+            }
         }
         li {
             line-height: 1.8;
-            margin-bottom: 0.75rem;
+            margin-bottom: 0.5rem;
             color: #c5c5c5;
-            padding-left: 0.5rem;
+            padding-left: 0.25rem;
+            font-size: 0.95rem;
+        }
+        @media (min-width: 768px) {
+            li {
+                margin-bottom: 0.75rem;
+                padding-left: 0.5rem;
+                font-size: 1rem;
+            }
         }
         li::before {
             content: "・ ";
@@ -58,9 +100,16 @@
             margin-right: 0.5rem;
         }
         ul, ol {
-            margin-left: 2.5rem;
-            margin-bottom: 1.5rem;
-            padding: 0 1.5rem;
+            margin-left: 1.5rem;
+            margin-bottom: 1rem;
+            padding: 0 0.5rem;
+        }
+        @media (min-width: 768px) {
+            ul, ol {
+                margin-left: 2.5rem;
+                margin-bottom: 1.5rem;
+                padding: 0 1.5rem;
+            }
         }
     </style>
 </head>
