--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>株式会社2W | 2W Inc.</title>
+    <title>株式会社2W | ITコンサルティング・システム開発・SES事業</title>
+    <meta name="description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
+    <meta name="keywords" content="ITコンサルティング,システム開発,SES,エンジニア,フリーランス,RichGeeks">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="Japanese">
+    <link rel="canonical" href="https://hp.2w-tech.com/">
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="株式会社2W | ITコンサルティング・システム開発・SES事業">
+    <meta property="og:description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
+    <meta property="og:url" content="https://hp.2w-tech.com/">
+    <meta property="og:site_name" content="2W Inc.">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="株式会社2W | ITコンサルティング・システム開発・SES事業">
+    <meta name="twitter:description" content="ITの力で、関わるすべての人とより良い未来を築く。">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- Schema.org 構造化データ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "株式会社2W",
+        "url": "https://hp.2w-tech.com/",
+        "description": "ITコンサルティング、システム開発、SES事業を展開する企業",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "東京都渋谷区恵比寿西2丁目8-4 EX恵比寿西ビル5階",
+            "addressLocality": "東京都",
+            "postalCode": "150-0021",
+            "addressCountry": "JP"
+        },
+        "sameAs": [
+            "https://richgeeks.2w-tech.com/"
+        ]
+    }
+    </script>
     <style>
         body {
             font-family: 'Noto Sans JP', sans-serif;
