--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>プライバシーポリシー | 株式会社2W | 2W Inc.</title>
+    <title>プライバシーポリシー | 株式会社2W</title>
+    <meta name="description" content="株式会社2Wのプライバシーポリシーです。個人情報の取扱いについて定めています。">
+    <meta name="robots" content="index, follow, noarchive">
+    <meta name="language" content="Japanese">
+    <link rel="canonical" href="https://hp.2w-tech.com/privacy-policy.html">
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="プライバシーポリシー | 株式会社2W">
+    <meta property="og:description" content="株式会社2Wのプライバシーポリシーです。個人情報の取扱いについて定めています。">
+    <meta property="og:url" content="https://hp.2w-tech.com/privacy-policy.html">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
