--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>株式会社2W | ITコンサルティング・システム開発・SES事業</title>
     <meta name="description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
     <meta name="keywords" content="ITコンサルティング,システム開発,SES,エンジニア,フリーランス,RichGeeks">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="language" content="Japanese">
+    <meta name="theme-color" content="#0a0a0a">
     <link rel="canonical" href="https://hp.2w-tech.com/">
     <!-- Open Graph -->
     <meta property="og:type" content="website">
@@ -15,6 +16,9 @@
     <meta property="og:description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
     <meta property="og:url" content="https://hp.2w-tech.com/">
     <meta property="og:site_name" content="2W Inc.">
+    <meta property="og:image" content="https://hp.2w-tech.com/images/winning_together.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="株式会社2W | ITコンサルティング・システム開発・SES事業">
@@ -30,6 +34,9 @@
         "@type": "Organization",
         "name": "株式会社2W",
         "url": "https://hp.2w-tech.com/",
+        "logo": "https://hp.2w-tech.com/favicon.ico",
+        "telephone": "",
+        "email": "contact@2w-tech.com",
         "description": "ITコンサルティング、システム開発、SES事業を展開する企業",
         "address": {
             "@type": "PostalAddress",
@@ -37,6 +44,11 @@
             "addressLocality": "東京都",
             "postalCode": "150-0021",
             "addressCountry": "JP"
+        },
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "Customer Service",
+            "areaServed": "JP"
         },
         "sameAs": [
             "https://richgeeks.2w-tech.com/"
