--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プライバシーポリシー | 株式会社2W</title>
     <meta name="description" content="株式会社2Wのプライバシーポリシーです。個人情報の取扱いについて定めています。">
-    <meta name="robots" content="index, follow, noarchive">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
     <meta name="language" content="Japanese">
     <link rel="canonical" href="https://hp.2w-tech.com/privacy-policy.html">
     <!-- Open Graph -->
