--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="株式会社2W | ITコンサルティング・システム開発・SES事業">
     <meta name="twitter:description" content="ITの力で、関わるすべての人とより良い未来を築く。">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <meta name="msapplication-TileColor" content="#0a0a0a">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
