--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,9 @@
     <meta property="og:title" content="プライバシーポリシー | 株式会社2W">
     <meta property="og:description" content="株式会社2Wのプライバシーポリシーです。個人情報の取扱いについて定めています。">
     <meta property="og:url" content="https://hp.2w-tech.com/privacy-policy.html">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://hp.2w-tech.com/favicon.ico">
+    <link rel="shortcut icon" href="https://hp.2w-tech.com/favicon.ico">
+    <link rel="apple-touch-icon" href="https://hp.2w-tech.com/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
