--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://hp.2w-tech.com/">
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="株式会社2W | ITコンサルティング・システム開発・SES事業">
+    <meta property="og:title" content="株式会社2W | 2W Inc.">
     <meta property="og:description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
     <meta property="og:url" content="https://hp.2w-tech.com/">
     <meta property="og:site_name" content="2W Inc.">
@@ -21,7 +21,7 @@
     <meta property="og:image:height" content="630">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="株式会社2W | ITコンサルティング・システム開発・SES事業">
+    <meta name="twitter:title" content="株式会社2W | 2W Inc.">
     <meta name="twitter:description" content="ITの力で、関わるすべての人とより良い未来を築く。">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="https://hp.2w-tech.com/favicon.ico">
