--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>株式会社2W | ITコンサルティング・システム開発・SES事業</title>
+    <title>株式会社2W | 2W Inc.</title>
     <meta name="description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
     <meta name="keywords" content="ITコンサルティング,システム開発,SES,エンジニア,フリーランス,RichGeeks">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
