--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "Organization",
+        "@type": "Website",
         "name": "株式会社2W",
+        "publisher": {
+            "@type": "Organization",
+            "name": "株式会社2W",
+            "logo": "https://hp.2w-tech.com/images/2w_logo.png"
+        },
         "url": "https://hp.2w-tech.com/",
         "logo": "https://hp.2w-tech.com/images/2w_logo.png",
         "telephone": "",
