--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>株式会社2W | 2W Inc.</title>
+    <title>株式会社2W - 2W Inc</title>
     <meta name="description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
     <meta name="keywords" content="ITコンサルティング,システム開発,SES,エンジニア,フリーランス,RichGeeks">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://hp.2w-tech.com/">
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="株式会社2W | 2W Inc.">
+    <meta property="og:title" content="株式会社2W - 2W Inc">
     <meta property="og:description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
     <meta property="og:url" content="https://hp.2w-tech.com/">
     <meta property="og:site_name" content="2W Inc.">
@@ -21,7 +21,7 @@
     <meta property="og:image:height" content="630">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="株式会社2W | 2W Inc.">
+    <meta name="twitter:title" content="株式会社2W - 2W Inc">
     <meta name="twitter:description" content="ITの力で、関わるすべての人とより良い未来を築く。">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="https://hp.2w-tech.com/favicon.ico">
@@ -36,7 +36,7 @@
     {
         "@context": "https://schema.org",
         "@type": "Website",
-        "name": "株式会社2W",
+        "name": "株式会社2W - 2W Inc.",
         "publisher": {
             "@type": "Organization",
             "name": "株式会社2W",
