--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="株式会社2W - 2W Inc">
     <meta property="og:description" content="ITの力で、関わるすべての人とより良い未来を築く。2Wはシステム開発、ITコンサルティング、エンジニアエージェント「RichGeeks」を提供しています。">
     <meta property="og:url" content="https://hp.2w-tech.com/">
-    <meta property="og:site_name" content="2W Inc.">
+    <meta property="og:site_name" content="株式会社2W - 2W Inc">
     <meta property="og:image" content="https://hp.2w-tech.com/images/winning_together.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
